bug fixes | maintain project text positioning when switching project | UI fixes on mobile

--- a/src/component/ProjectsPage/FeaturedProjects/style.css
+++ b/src/component/ProjectsPage/FeaturedProjects/style.css
@@ -5,7 +5,7 @@
 
 .featured-projects {
   display: flex;
-  width: 80vw;
+  width: 90vw;
 }
 
 .projects-title {
@@ -84,7 +84,7 @@
   font-size: 3vh;
   position: relative;
   width: 100px;
-  margin-left:5px;
+  margin-left: 5px;
 }
 
 .projects-mobile {
@@ -108,8 +108,8 @@
 }
 
 .image {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -156,13 +156,6 @@
     max-width: unset;
   }
 
-  .project img {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50vw;
-    height: auto;
-  }
-
   .projects-desktop {
     display: none;
   }
@@ -176,10 +169,13 @@
     align-items: center;
     justify-content: space-between;
     margin-right: 4%;
+    margin-bottom: 10%;
   }
 
   .project-team {
     margin-top: -10%;
+    width: 33vw;
+    height: 10vh;
   }
 
   .project-text p {
@@ -207,8 +203,9 @@
   }
 
   .image-container {
-    width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 25vh;
+    object-fit: contain;
   }
 
   .view-project-button {
@@ -216,9 +213,5 @@
     width: fit-content;
     margin: 0;
     padding: 10px 30px;
-  }
-  
-  .image {
-
   }
 }
